Fix green over blue contrast values

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,9 @@
 // Set up variables
 $colors: (
   primary: #176587,
-  secondary: #22B573,
+  secondary: #30D48B,
   dark-primary: #185570,
-  dark-secondary: darken(#22B573, 5%),
+  dark-secondary: #22B573,
 
   text-color: #333333,
   text-light: #777777,
@@ -456,6 +456,10 @@ nav {
       padding: 3rem 4rem 12rem;
     }
 
+    h2 {
+      color: color(dark-secondary);
+    }
+
 
     .connectors {
       grid-area: connectors;
@@ -477,7 +481,7 @@ nav {
       background-color: white;
       box-shadow: 4px 10px 10px rgba(0, 0,0, 0.03);
       border-radius: 2px;
-      border: 1px solid color(secondary);
+      border: 1px solid color(dark-secondary);
       padding: 2rem;
       transition: .5s ease-out;
 
@@ -489,8 +493,8 @@ nav {
       a, :active, a:visited {
         font-size: medium;
         float: left;
-        color: color(secondary);
-        border: 1px solid color(secondary);
+        color: color(dark-secondary);
+        border: 1px solid color(dark-secondary);
         border-radius: 6px;
         text-decoration: none;
         text-transform: capitalize;
@@ -500,7 +504,7 @@ nav {
       }
 
       a:hover {
-        background-color: color(secondary);
+        background-color: color(dark-secondary);
         color: white;
         transition: background-color 1s ease-out;
       }
